<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/mainRLayout"
    android:background="#000000"
    >
    <pku.ss.snews.IntroduceGroupView
       xmlns:android="http://schemas.android.com/apk/res/android"    
	  android:id="@+id/ScrollLayout"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  android:visibility="visible"
	  >
      <RelativeLayout  android:background="@drawable/w01"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent"
	  >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:layout_marginBottom="89dp"
              android:text="@string/introduce_1"
              android:textColor="@color/TextColor"
              android:textSize="18sp" />
      </RelativeLayout>
      <RelativeLayout  android:background="@drawable/whatsnew_bg"    
	  	android:layout_width="fill_parent"    
	  	android:layout_height="fill_parent"
	  	>
          <TextView
              android:id="@+id/t1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="96dp"
              android:text="@string/introduce_2"
              android:gravity="center_horizontal"
              android:textColor="@color/TextColor"
              android:textSize="18sp" />
          
          <ImageView
              android:id="@+id/introduceImg1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="200dp"
              android:gravity="center_horizontal"
                android:src="@drawable/snews2dcode" />
      </RelativeLayout>
      <RelativeLayout  android:background="@drawable/whatsnew_bg"    
	  	android:layout_width="fill_parent"    
	  	android:layout_height="fill_parent"
	  	>
          <TextView
              android:id="@+id/t1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="96dp"
              android:text="@string/introduce_3"
              android:gravity="center_horizontal"
              android:textColor="@color/TextColor"
              android:textSize="18sp" />
          
          <ImageView
              android:id="@+id/introduceImg2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="200dp"
              android:gravity="center_horizontal"
                android:src="@drawable/shake" />
          
      </RelativeLayout>
      <RelativeLayout  android:background="@drawable/w08"    
	  	android:layout_width="fill_parent"    
	  	android:layout_height="fill_parent"
	  	>
          <TextView
              android:id="@+id/t1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="96dp"
              android:text="@string/introduce_4"
              android:gravity="center_horizontal"
              android:textColor="@color/TextColor"
              android:textSize="18sp" />
      </RelativeLayout>
      <RelativeLayout  android:background="@drawable/w01"    
	  android:layout_width="fill_parent"    
	  android:layout_height="fill_parent">
          <Button
              android:id="@+id/startBtn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:layout_marginBottom="98dp"
             android:text="@string/introduce_5"
              android:textSize="18sp"
              android:textColor="@color/TextColor"
              android:background="@drawable/button_bg"
              android:layout_marginLeft="8dp"
			  android:layout_marginRight="8dp"
			  android:layout_gravity="center_vertical"
              />
      </RelativeLayout>
    </pku.ss.snews.IntroduceGroupView>
    <LinearLayout 
    	android:orientation="horizontal" 
    	android:id="@+id/llayout" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_marginBottom="24.0dip" 
    	android:layout_alignParentBottom="true" 
    	android:layout_centerHorizontal="true"
    	android:visibility="visible">
    	
        <ImageView android:clickable="true"  android:padding="5.0dip" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" /><!-- 
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" /> -->
        <ImageView android:clickable="true"  android:padding="5.0dip"  android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/page_indicator_bg" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/animLayout"
        >
        <LinearLayout
            android:id="@+id/leftLayout" 
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_left"/>
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_left_m"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/rightLayout" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_right_m"/>
        <ImageView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/whatsnew_right"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>